# granite-tsfm

./: .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .whitesource  .whitesource.config  Makefile  README.md  SECURITY_FIX_GHSA-9mmf-qgpx-g4qx.md  SECURITY_PATCH-9mmf-qgpx-g4qx.ADDITIONAL_MODULES.md  SECURITY_PATCH-9mmf-qgpx-g4qx.README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_notebook.txt  whitesource.config  wiki.md
.github/: CODEOWNERS
.github/workflows/: finetuning-service-test.yml  inactive-issues.yml  inference-services-test.yml  python-package.yml  services-test.yml
agentic/mcp/: pyproject.toml
agentic/mcp-server/: pyproject.toml
agentic/mcp-server/tsfm_mcp_server/: app.py  datautil.py  payloads.py
agentic/tests/: test_datautil.py
hacking/: datasets_from_tsp.py
hacking/caikit_hello_bob/: client.py
hacking/caikit_hellobob/: README.md  client.py  requirements.txt  start_runtime.py
local_scripts/: granite-r1.sh  granite-r2.sh  granite_research-r2.sh
notebooks/: patch_tst_fine_tune.py  patch_tst_inference.py  patch_tst_pretrain.py
notebooks/hfdemo/: Bike_Sharing_Finetuning_with_Exogenous_granite_tsfm.ipynb  classification_dataset.ipynb  flowstate_getting_started.ipynb  flowstate_getting_started_pipeline.ipynb  flowstate_gift_eval.ipynb  patch_tsmixer_blog.ipynb  patch_tsmixer_getting_started.ipynb  patch_tsmixer_transfer.ipynb  patch_tst_getting_started.ipynb  patch_tst_transfer.ipynb  patchtsmixer_HF_blog.ipynb  patchtst_fm_getting_started.ipynb  rolling_tsad.ipynb  tspulse_anomaly_detection.ipynb  tspulse_classification.ipynb  tspulse_classification_data.ipynb  tspulse_forecasting_with_imputation.ipynb  tspulse_getting_started.ipynb  tspulse_imputation.ipynb  tspulse_search_example_with_vector_db.ipynb  tspulse_search_simple_example.ipynb  tspulse_search_with_faiss.ipynb  tspulse_stitching_optimize.ipynb  ttm_conformal_anomaly_detection.ipynb  ttm_forecasting_with_probabilistic_bounds.ipynb  ttm_getting_started-lora.ipynb  ttm_getting_started.ipynb  ttm_quantile.py  ttm_quantile_example.ipynb  ttm_r3_getting_started.ipynb  ttm_rolling_prediction_getting_started.ipynb  ttm_simple_context_quantiles.py
notebooks/thinklab/: 01_patch_tst_pretrain.ipynb  01_patch_tst_pretrain_110923.ipynb  02_patch_tst_fine_tune.ipynb  02_patch_tst_fine_tune_110923.ipynb  03_patch_tst_inference.ipynb  03_patch_tst_inference_110923.ipynb
notebooks/tutorial/: DataLoadingAndStatistics.ipynb  LongHorizonForecast.ipynb  StatisticalModels.ipynb  TimeseriesTutorial.ipynb  chronos_with_tsfm.ipynb  install_tsfm.ipynb  ttm_channel_mix_finetuning.ipynb  ttm_distribution_head.py  ttm_retail.ipynb  ttm_tutorial.ipynb  ttm_tutorial_static_categorical.ipynb  ttm_tutorial_with_ans.ipynb  ttm_with_exog_tutorial.ipynb
scripts/: travis_install
services/: __init__.py
services/boilerplate/: Dockerfile.cpu  README  __init__.py  dataframe_checks.py  dirutil.py  error_logging.py  errors.py  hf_service_handler.py  hf_service_handler_delete.py  hfutil.py  inference_payloads.py  ioutils.py  service_handler.py  tsfm_config.py  tsfm_service_handler.py  tsfm_util.py  version.py  warning.txt
services/finetuning/: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  Makefile  README.md  pyproject.toml
services/finetuning/examples/: alpine.yaml  finetuning.md  kfto_job.yaml  local_pvc.yaml
services/finetuning/tests/: fetchdata.py  test_finetune_libcode.py  test_finetuning.py  test_ftmain.py  test_ioutils.py
services/finetuning/tests/data/: ETTh2.csv  ETTh2.feather
services/finetuning/tsfmfinetuning/: .gitignore  __init__.py  dataframe_checks.py  default_config.yml  dirutil.py  error_logging.py  errors.py  filelogging_tracker.py  finetuning.py  finetuning_payloads.py  ftargs.py  ftcommon.py  ftmain.py  ftmainwxai.py  ftpayloads.py  ftservice.py  hf_tuning_handler.py  hfutil.py  ioutils.py  model_parameters.py  payloads.py  routes.py  service_handler.py  tsfm_tuning_handler.py  tsfm_util.py  tuning_handler.py  version.py
services/inference/: .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Makefile  README.md  cuda.repo-x86_64  deploywx.sh  doxygen.conf  foo.toml  granite-tsfm.code-workspace  main.py  openapi.json  pyproject.toml  requirements.txt  scaling_analysis.sh  tsfm_config.json
services/inference/examples/aws/sagemaker/tsfm_custom/: .gitignore  README.md  get_started_tsfm_deploy.ipynb
services/inference/examples/aws/sagemaker/tsfm_custom/code/: .gitignore  inference.py  requirements.txt  test_local.py
services/inference/examples/k8s/: alpine.yaml  ris3_deployment.yaml  ris3_service.yaml  simple_deployment.yaml
services/inference/tests/: prodpayload.json  test_inference.py  test_inference_lib.py  test_inference_service.py  test_inference_service_embedding.py  test_inference_service_prod.py
services/inference/tests/locust/: locust.conf  locust.localhost.inference.forecast.conf  locust.ris3.inference.forecast.conf  locustfile.py  payload.json
services/inference/tsfminference/: .gitignore  __init__.py  chronos_service_handler.py  constants.py  dataframe_checks.py  default_config.yml  dirutil.py  errors.py  hf_inference_handler.py  hf_service_handler.py  inference.py  inference_handler.py  inference_payloads.py  ioutils.py  logging.conf  main.py  payloads.py  service_handler.py  tsfm_config.py  tsfm_inference_handler.py  tsfm_model.py  tsfm_service_handler.py  tsfm_util.py  util.py  version.py
services/inference/tsfmservices/: __init__.py
services/inference/tsfmservices/common/: constants.py  util.py
services/inference/tsfmservices/config/: default_config.yml
services/inference/tsfmservices/inference/: __init__.py  inference.py  main.py  payloads.py
services/tests/: test_dataframe_checks.py  test_dirutil.py
tests/: util.py
tests/toolkit/: conftest.py  test_conformal.py  test_data_handling.py  test_dataset.py  test_get_model.py  test_gluonts_data_wrapper.py  test_hf_util.py  test_lr_finder.py  test_processor.py  test_service_util.py  (+9 more)
tsfm_public/: __init__.py  version.py
tsfmagentic/: pyproject.toml
(+336 files in other folders)
