[build-system]
requires = ["setuptools>=66", "wheel", "Cython"]

[project]
name = "tsfm_public"
requires-python = ">=3.9,<3.12"
version = "0.0.1"
authors = [{ name = "IBM" }]
description = "Public notebooks and utilities for TSFM"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Development Status :: 4 - Beta", "License :: OSI Approved :: Apache Software License"]

dependencies = [
    "pandas>=2.2.0",
    "scikit-learn",
    "transformers[torch]>=4.36.1",
    "datasets"
]

[tool.setuptools]
packages = ["tsfm_public", "tsfm_public.toolkit", "tsfm_public.models", "tsfm_public.models.tinytimemixer", "tsfm_public.models.tinytimemixer.utils", "tsfmhfdemos", "tsfmhfdemos.neurips", "tsfmhfdemos.neurips.backends", "tsfmhfdemos.neurips.backends.v1", "tsfmhfdemos.neurips.backends.v1.figures"]

[project.optional-dependencies]

notebooks = ["jupyter", "matplotlib", "datasets", "ipywidgets", "plotly", "kaleido", "tensorboard"]
testing = ["pytest", "tsfm_public[notebooks]", "parameterized"]
dev = ["pre-commit", "tsfm_public[testing]", "ruff==0.1.5"]
evaluation = [
    "tsevaluate @ git+ssh://git@github.ibm.com/srom/tsevaluate.git",
]
all = ["tsfm_public[notebooks,testing,dev]"]
# ogv deployments will already have jupyter
# and we don't want to mess with RH's tested version
ogv = ["datasets", "plotly", "kaleido"]
demos = [
    "tsfm_public[notebooks]",
    "streamlit",
    "altair<5",
    "plotly",
    "streamlit-aggrid",
    "kaleido",
    "toml"
]
# ###################################################


[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823" ]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["tsfm_public"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"