[project]
name = "tsfmagentic"
version = "0.0.1"
description = "Agentic components for TSFM"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = []

[tool.uv.workspace]
members = ["packages/tsfm_mcp_server"]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
