[project]
name = "tsfmfinetuning"
version = "0.0.0"
description = "Finetuning capabilities for IBM Granite TSFM Models"
authors = [{ name = "IBM" }]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "pydantic>1,<3",
    "granite-tsfm"
]

[tool.uv.sources]
granite-tsfm = { git = "https://github.com/ibm-granite/granite-tsfm.git", branch = "uv" }

[project.optional-dependencies]
dev = [
    "pytest",
    "wget",
    "kubeflow-training",
    "pytest-coverage",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
