[project]
name = "tsfmfinetuning"
version = "0.0.0"
description = "Finetuning capabilities for IBM Granite TSFM Models"
authors = [{ name = "IBM" }]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = ["tsfminference"]

[tool.uv.sources]
tsfminference = { workspace = true }

[project.optional-dependencies]
dev = ["pytest", "wget", "kubeflow-training", "pytest-coverage"]

[tool.setuptools.packages.find]
include = ["tsfmfinetuning"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
