[project]
name = "tsfminference"
version = "0.0.0"
description = "Service layer for TSFM granite models."
license-files = ["LICENSE"]
authors = [
  { name = "IBM" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
  "filelock",
  "fastapi",
  "pydantic>1,<3",
  "gunicorn",
  "uvicorn-worker",
  "prometheus_client",
  "psutil",
  "granite-tsfm"
]

[tool.uv.sources]
granite-tsfm = { workspace = true }

[project.optional-dependencies]
dev = [
  "pytest",
  "locust",
  "inotify",
  "pytest-coverage",
]

sagemaker = [
  "sagemaker",
  "boto3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
