[project]
name = "tsfminference"
version = "0.0.0"
description = "Service layer for TSFM granite models."
authors = [
  { name = "IBM" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
  "filelock",
  "fastapi",
  "pydantic>1,<3",
  "gunicorn",
  "uvicorn-worker",
  "prometheus_client",
  "psutil",
  "granite-tsfm",
  "datasets>=4.5", # with python3.12 this gets back versioned without this for some reason
  ]

[tool.uv.sources]
granite-tsfm = { git = "https://github.com/ibm-granite/granite-tsfm.git", branch = "destiny" }

[project.optional-dependencies]
dev = [
  "pytest",
  "locust",
  "locust-plugins",
  "inotify",
  "pytest-coverage",
]

torch-cpu = [
  "torch"
]

sagemaker = [
  "sagemaker",
  "boto3",
  "mlflow>=2.2.1"
]

[tool.setuptools.packages.find]
include = ["tsfminference"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


